# Ray-Trace-Cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  sceneData.txt  sphereData.txt
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: color.cpp  color.h  config.h  light.cpp  light.h  pixel_buffer.cpp  pixel_buffer.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sdl_manager.cpp  sdl_manager.h  sphere.cpp  sphere.h  vector3.cpp  vector3.h  vector3D.cpp
